Ship list, hit counter, dictionaries
Created appropriately-sized ship lists for each player for each ship, a hit counter to keep track of successful hits, and dictionaries for ease of translating user input.

--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -27,7 +27,17 @@
     "        self.nine = ['A9', 'B9', 'C9', 'D9', 'E9', 'F9', 'G9', 'H9', 'I9', 'J9']\n",
     "        self.ten = ['A10', 'B10', 'C10', 'D10', 'E10', 'F10', 'G10', 'H10', 'I10', 'J10']\n",
     "        self.rows = (self.null, self.one, self.two, self.three, self.four, self.five, self.six, self.seven, self.eight, self.nine, self.ten)\n",
-    "        self.columns = {\"A\":0, \"B\": 1, \"C\":2, \"D\": 3, \"E\":4, \"F\":5, \"G\": 6, \"H\":7, \"I\":8, \"J\":9}"
+    "        self.columns = {\"A\":0, \"B\": 1, \"C\":2, \"D\": 3, \"E\":4, \"F\":5, \"G\": 6, \"H\":7, \"I\":8, \"J\":9}\n",
+    "        #created lists for each ship type with the appropriate number of elements representing the size of each ship type.\n",
+    "        self.carriers = [\"car\", \"car\", \"car\", \"car\", \"car\"]\n",
+    "        self.battleships = [\"bat\", \"bat\", \"bat\", \"bat\"]\n",
+    "        self.destroyers = [\"des\", \"des\", \"des\"]\n",
+    "        self.submarines = [\"sub\", \"sub\", \"sub\"]\n",
+    "        self.patrol_boats = [\"pat\", \"pat\"]\n",
+    "        #Created a self.successful hits counter that should be incremented each time a player launches a succesfful attack in order to keep track.\n",
+    "        self.successful_hits = 0\n",
+    "        self.ship_list = {\"car\":self.carriers, \"bat\":self.battleships, \"des\":self.destroyers, \"sub\":self.submarines, \"pat\":self.patrol_boats}\n",
+    "        self.ship_abb = {\"car\":\"carrier\", \"bat\":\"battleship\", \"des\":\"destroyer\", \"sub\":\"submarine\", \"pat\":\"patrol boat\"}"
    ]
   }
  ],
