--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -37,7 +37,21 @@
     "        #Created a self.successful hits counter that should be incremented each time a player launches a succesfful attack in order to keep track.\n",
     "        self.successful_hits = 0\n",
     "        self.ship_list = {\"car\":self.carriers, \"bat\":self.battleships, \"des\":self.destroyers, \"sub\":self.submarines, \"pat\":self.patrol_boats}\n",
-    "        self.ship_abb = {\"car\":\"carrier\", \"bat\":\"battleship\", \"des\":\"destroyer\", \"sub\":\"submarine\", \"pat\":\"patrol boat\"}"
+    "        self.ship_abb = {\"car\":\"carrier\", \"bat\":\"battleship\", \"des\":\"destroyer\", \"sub\":\"submarine\", \"pat\":\"patrol boat\"}\n",
+    "#The below are for creating an attacking board for each player.\n",
+    "        self.one_attack = ['A1', 'B1', 'C1', 'D1', 'E1', 'F1', 'G1', 'H1', 'I1', 'J1']\n",
+    "        self.two_attack = [\"A2\", \"B2\", \"C2\", \"D2\", \"E2\", \"F2\", \"G2\", \"H2\", \"I2\", \"J2\"]\n",
+    "        self.three_attack = [\"A3\", \"B3\", \"C3\", \"D3\", \"E3\", \"F3\", \"G3\", \"H3\", \"I3\", \"J3\"]\n",
+    "        self.four_attack = ['A4', 'B4', 'C4', 'D4', 'E4', 'F4', 'G4', 'H4', 'I4', 'J4']\n",
+    "        self.five_attack = ['A5', 'B5', 'C5', 'D5', 'E5', 'F5', 'G5', 'H5', 'I5', 'J5']\n",
+    "        self.six_attack = ['A6', 'B6', 'C6', 'D6', 'E6', 'F6', 'G6', 'H6', 'I6', 'J6']\n",
+    "        self.seven_attack = ['A7', 'B7', 'C7', 'D7', 'E7', 'F7', 'G7', 'H7', 'I7', 'J7']\n",
+    "        self.eight_attack = ['A8', 'B8', 'C8', 'D8', 'E8', 'F8', 'G8', 'H8', 'I8', 'J8']\n",
+    "        self.nine_attack = ['A9', 'B9', 'C9', 'D9', 'E9', 'F9', 'G9', 'H9', 'I9', 'J9']\n",
+    "        self.ten_attack = ['A10', 'B10', 'C10', 'D10', 'E10', 'F10', 'G10', 'H10', 'I10', 'J10']\n",
+    "        self.rows_attack = (self.null, self.one_attack, self.two_attack, self.three_attack, self.four_attack, self.five_attack, self.six_attack, self.seven_attack, self.eight_attack, self.nine_attack, self.ten_attack)\n",
+    "#The below is for recording all ship locations to prevent overlapping locations.\n",
+    "        self.locations = []"
    ]
   }
  ],
