--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -14,6 +14,7 @@
     "p2 = \"Daayam\"\n",
     "class Player:\n",
     "    def __init__(self, name):\n",
+    "\n",
     "        self.name = name\n",
     "        self.null = []\n",
     "        self.one = ['A1', 'B1', 'C1', 'D1', 'E1', 'F1', 'G1', 'H1', 'I1', 'J1']\n",
@@ -28,16 +29,19 @@
     "        self.ten = ['A10', 'B10', 'C10', 'D10', 'E10', 'F10', 'G10', 'H10', 'I10', 'J10']\n",
     "        self.rows = (self.null, self.one, self.two, self.three, self.four, self.five, self.six, self.seven, self.eight, self.nine, self.ten)\n",
     "        self.columns = {\"A\":0, \"B\": 1, \"C\":2, \"D\": 3, \"E\":4, \"F\":5, \"G\": 6, \"H\":7, \"I\":8, \"J\":9}\n",
+    "\n",
     "        #created lists for each ship type with the appropriate number of elements representing the size of each ship type.\n",
     "        self.carriers = [\"car\", \"car\", \"car\", \"car\", \"car\"]\n",
     "        self.battleships = [\"bat\", \"bat\", \"bat\", \"bat\"]\n",
     "        self.destroyers = [\"des\", \"des\", \"des\"]\n",
     "        self.submarines = [\"sub\", \"sub\", \"sub\"]\n",
     "        self.patrol_boats = [\"pat\", \"pat\"]\n",
+    "\n",
     "        #Created a self.successful hits counter that should be incremented each time a player launches a succesfful attack in order to keep track.\n",
     "        self.successful_hits = 0\n",
     "        self.ship_list = {\"car\":self.carriers, \"bat\":self.battleships, \"des\":self.destroyers, \"sub\":self.submarines, \"pat\":self.patrol_boats}\n",
     "        self.ship_abb = {\"car\":\"carrier\", \"bat\":\"battleship\", \"des\":\"destroyer\", \"sub\":\"submarine\", \"pat\":\"patrol boat\"}\n",
+    "\n",
     "#The below are for creating an attacking board for each player.\n",
     "        self.one_attack = ['A1', 'B1', 'C1', 'D1', 'E1', 'F1', 'G1', 'H1', 'I1', 'J1']\n",
     "        self.two_attack = [\"A2\", \"B2\", \"C2\", \"D2\", \"E2\", \"F2\", \"G2\", \"H2\", \"I2\", \"J2\"]\n",
@@ -50,8 +54,19 @@
     "        self.nine_attack = ['A9', 'B9', 'C9', 'D9', 'E9', 'F9', 'G9', 'H9', 'I9', 'J9']\n",
     "        self.ten_attack = ['A10', 'B10', 'C10', 'D10', 'E10', 'F10', 'G10', 'H10', 'I10', 'J10']\n",
     "        self.rows_attack = (self.null, self.one_attack, self.two_attack, self.three_attack, self.four_attack, self.five_attack, self.six_attack, self.seven_attack, self.eight_attack, self.nine_attack, self.ten_attack)\n",
+    "\n",
     "#The below is for recording all ship locations to prevent overlapping locations.\n",
-    "        self.locations = []"
+    "        self.locations = []\n",
+    "#The below two class methods are for returning the board or the attacking board. Attacking board can be shown before each attack to see where the previous attacks have been\n",
+    "    def board(self):\n",
+    "        for line in self.rows:\n",
+    "            print(line)\n",
+    "            print(\"\\n\")\n",
+    "            \n",
+    "    def attack_board(self):\n",
+    "        for line in self.rows_attack:\n",
+    "            print(line)\n",
+    "            print(\"\\n\")"
    ]
   }
  ],
