Class instantiation and dictionary creation
Instantiated both players, and created multiple dictionaries for:
translating user input into variable calls, assigning numerical indices to ship names/abbreviations, storing ship locations, and more.

--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -68,6 +68,31 @@
     "            print(line)\n",
     "            print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating both instances of player\n",
+    "player1 = Player(p1)\n",
+    "player2 = Player(p2)\n",
+    "\n",
+    "#The below dictionaries are all for translating user input into variable calls.\n",
+    "#The below two dicts are for storing the locations of the ships. The numbers (keys) correspond to the ships in order of largest to smallest.\n",
+    "play1_dict = {0:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 1:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 2:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 3:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 4:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}}\n",
+    "play2_dict = {0:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 1:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 2:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 3:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}, 4:{'row':0, 'row_spaces': 0, 'column': 0, 'column_spaces':0}}\n",
+    "#The dictionary below is for assigning the correct length to each ship\n",
+    "length = {0:'5', 1:'4', 2:'3', 3:'3', 4:'2'}\n",
+    "#The below dictionary is for assigning the numerical indices of each ship to their abbreviations.\n",
+    "abbrev = {0: 'car', 1: 'bat', 2:'des', 3:'sub', 4:'pat'}\n",
+    "#The below dictionary is for assigning the numerical indices of each ship to their name.\n",
+    "names = {0: 'carrier', 1: 'battleship', 2: 'destroyer', 3: 'submarine', 4: 'patrol boat'}\n",
+    "#The below two dictionaries are for showing examples of locations inputs specific to each ship's size.\n",
+    "row_example = {0: 'ABCDE, CDEFH', 1: 'ABCD, CDEF', 2: 'ABC, CDE', 3: 'ABC, CDE', 4:'AB, CD'}\n",
+    "column_example = {0: '1:5, 3:7', 1: '1:4, 3:6', 2: '1:3, 3:5', 3:'1:3, 3:5', 4:'1:2, 3:4'}"
+   ]
   }
  ],
  "metadata": {
