Added Ship Location Input
Added 10 blocks of code (one for each ship for each player).

--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -93,6 +93,250 @@
     "row_example = {0: 'ABCDE, CDEFH', 1: 'ABCD, CDEF', 2: 'ABC, CDE', 3: 'ABC, CDE', 4:'AB, CD'}\n",
     "column_example = {0: '1:5, 3:7', 1: '1:4, 3:6', 2: '1:3, 3:5', 3:'1:3, 3:5', 4:'1:2, 3:4'}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Setting up player 1 carriers\n",
+    "player1_board_c = input(\"Player 1, input your carrier location. It has FIVE spaces and can be placed in FIVE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the carrier to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player1_board_c == \"row\":\n",
+    "    car_row_num_1 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    car_row_spaces_1 = input(\"Which FIVE consecutive letters? E.g. ABCDE, DEFGH, FGHIJ.\")\n",
+    "    car_loc_1 = (car_row_num_1, car_row_spaces_1)\n",
+    "    print(car_row_num_1, car_row_spaces_1)\n",
+    "    player1.rows[int(car_row_num_1)][player1.columns[car_row_spaces_1[0]]:player1.columns[car_row_spaces_1[-1]]+1] = \"car\", \"car\", \"car\", \"car\", \"car\"\n",
+    "elif player1_board_c == \"column\":\n",
+    "    car_col_num_1 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    car_col_spaces_1 = input(\"Which FIVE consecutive numbers? E.g. 1:5, 3:7, 6:10.\")\n",
+    "    car_loc_1 = (car_col_num_1, car_col_spaces_1)\n",
+    "    print(car_col_num_1, car_col_spaces_1)\n",
+    "    if len(car_col_spaces_1) >3:\n",
+    "        for i in range(int(car_col_spaces_1[0]),int(car_col_spaces_1[-2:])+1):\n",
+    "            player1.rows[i][player1.columns[car_col_num_1]] = \"car\"\n",
+    "    else:\n",
+    "        for i in range(int(car_col_spaces_1[0]),int(car_col_spaces_1[2])+1):\n",
+    "            player1.rows[i][player1.columns[car_col_num_1]] = \"car\"\n",
+    "        \n",
+    "#setting up player 1 battleships\n",
+    "print(\"Carrier:\", car_loc_1)\n",
+    "player1_board_b = input(\"Player 1, input your battleship location. It has FOUR spaces and can be placed in FOUR consecutive horizontal or vertical spaces. Please enter 'row' if you would like the battleship to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player1_board_b == \"row\":\n",
+    "    bat_row_num_1 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    bat_row_spaces_1 = input(\"Which FOUR consecutive letters? E.g. ABCD, DEFG, FGHI.\")\n",
+    "    bat_loc_1 = (bat_row_num_1, bat_row_spaces_1)\n",
+    "    print(bat_row_num_1, bat_row_spaces_1)\n",
+    "    player1.rows[int(bat_row_num_1)][player1.columns[bat_row_spaces_1[0]]:player1.columns[bat_row_spaces_1[-1]]+1] = \"bat\", \"bat\", \"bat\", \"bat\"\n",
+    "\n",
+    "elif player1_board_b == \"column\":\n",
+    "    bat_col_num_1 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    bat_col_spaces_1 = input(\"Which FOUR consecutive numbers? E.g. 1:4, 3:6, 6:9.\")\n",
+    "    bat_loc_1 = (bat_col_num_1, bat_col_spaces_1)\n",
+    "    print(bat_col_num_1, bat_col_spaces_1)\n",
+    "    if len(bat_col_spaces_1) >3:\n",
+    "        for i in range(int(bat_col_spaces_1[0]),int(bat_col_spaces_1[-2:])+1):\n",
+    "            player1.rows[i][player1.columns[bat_col_num_1]] = \"bat\"\n",
+    "    else:\n",
+    "        for i in range(int(bat_col_spaces_1[0]),int(bat_col_spaces_1[2])+1):\n",
+    "            player1.rows[i][player1.columns[bat_col_num_1]] = \"bat\"\n",
+    "\n",
+    "\n",
+    "#Setting up player 1 destroyers\n",
+    "print(\"Carrier:\", car_loc_1)\n",
+    "print(\"Battleship:\", bat_loc_1)\n",
+    "player1_board_d = input(\"Player 1, input your destroyer location. It has THREE spaces and can be placed in THREE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the destroyer to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player1_board_d == \"row\":\n",
+    "    des_row_num_1 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    des_row_spaces_1 = input(\"Which THREE consecutive letters? E.g. ABC, DEF, FGH.\")\n",
+    "    des_loc_1 = (des_row_num_1, des_row_spaces_1)\n",
+    "    print(des_row_num_1, des_row_spaces_1)\n",
+    "    player1.rows[int(des_row_num_1)][player1.columns[des_row_spaces_1[0]]:player1.columns[des_row_spaces_1[-1]]+1] = \"des\", \"des\", \"des\"\n",
+    "\n",
+    "elif player1_board_d == \"column\":\n",
+    "    des_col_num_1 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    des_col_spaces_1 = input(\"Which THREE consecutive numbers? E.g. 1:3, 3:5, 6:8.\")\n",
+    "    des_loc_1 = (des_col_num_1, des_col_spaces_1)\n",
+    "    print(des_col_num_1, des_col_spaces_1)\n",
+    "    if len(des_col_spaces_1) >3:\n",
+    "        for i in range(int(des_col_spaces_1[0]),int(des_col_spaces_1[-2:])+1):\n",
+    "            player1.rows[i][player1.columns[des_col_num_1]] = \"des\"\n",
+    "    else:\n",
+    "        for i in range(int(des_col_spaces_1[0]),int(des_col_spaces_1[2])+1):\n",
+    "            player1.rows[i][player1.columns[des_col_num_1]] = \"des\"\n",
+    "\n",
+    "\n",
+    "#Setting up player 1 submarines\n",
+    "print(\"Carrier:\", car_loc_1)\n",
+    "print(\"Battleship:\", bat_loc_1)\n",
+    "print(\"Destroyer:\", des_loc_1)\n",
+    "player1_board_s = input(\"Player 1, input your submarine location. It has THREE spaces and can be placed in THREE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the submarine to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player1_board_s == \"row\":\n",
+    "    sub_row_num_1 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    sub_row_spaces_1 = input(\"Which THREE consecutive letters? E.g. ABC, DEF, FGH.\")\n",
+    "    sub_loc_1 = (sub_row_num_1, sub_row_spaces_1)\n",
+    "    print(sub_row_num_1, sub_row_spaces_1)\n",
+    "    player1.rows[int(sub_row_num_1)][player1.columns[sub_row_spaces_1[0]]:player1.columns[sub_row_spaces_1[-1]]+1] = \"sub\", \"sub\", \"sub\"\n",
+    "\n",
+    "elif player1_board_s == \"column\":\n",
+    "    sub_col_num_1 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    sub_col_spaces_1 = input(\"Which THREE consecutive numbers? E.g. 1:3, 3:5, 6:8.\")\n",
+    "    sub_loc_1 = (sub_col_num_1, sub_col_spaces_1)\n",
+    "    print(sub_col_num_1, sub_col_spaces_1)\n",
+    "    if len(sub_col_spaces_1) >3:\n",
+    "        for i in range(int(sub_col_spaces_1[0]),int(sub_col_spaces_1[-2:])+1):\n",
+    "            player1.rows[i][player1.columns[sub_col_num_1]] = \"sub\"\n",
+    "    else:\n",
+    "        for i in range(int(sub_col_spaces_1[0]),int(sub_col_spaces_1[2])+1):\n",
+    "            player1.rows[i][player1.columns[sub_col_num_1]] = \"sub\"\n",
+    "\n",
+    "\n",
+    "#setting up player 1 patrol boats\n",
+    "print(\"Carrier:\", car_loc_1)\n",
+    "print(\"Battleship:\", bat_loc_1)\n",
+    "print(\"Destroyer:\", des_loc_1)\n",
+    "print(\"Submarine:\", sub_loc_1)\n",
+    "player1_board_p = input(\"Player 1, input your patrol boat location. It has TWO spaces and can be placed in TWO consecutive horizontal or vertical spaces. Please enter 'row' if you would like the patrol boat to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player1_board_p == \"row\":\n",
+    "    pat_row_num_1 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    pat_row_spaces_1 = input(\"Which TWO consecutive letters? E.g. AB, DE, FG.\")\n",
+    "    print(pat_row_num_1, pat_row_spaces_1)\n",
+    "    player1.rows[int(pat_row_num_1)][player1.columns[pat_row_spaces_1[0]]:player1.columns[pat_row_spaces_1[-1]]+1] = \"pat\", \"pat\"\n",
+    "\n",
+    "elif player1_board_p == \"column\":\n",
+    "    pat_col_num_1 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    pat_col_spaces_1 = input(\"Which TWO consecutive numbers? E.g. 1:2, 3:4, 6:7.\")\n",
+    "    print(pat_col_num_1, pat_col_spaces_1)\n",
+    "    if len(pat_col_spaces_1) >3:\n",
+    "        for i in range(int(pat_col_spaces_1[0]),int(pat_col_spaces_1[-2:])+1):\n",
+    "            player1.rows[i][player1.columns[pat_col_num_1]] = \"pat\"\n",
+    "    else:\n",
+    "        for i in range(int(pat_col_spaces_1[0]),int(pat_col_spaces_1[2])+1):\n",
+    "            player1.rows[i][player1.columns[pat_col_num_1]] = \"pat\"\n",
+    "\n",
+    "player1.board()\n",
+    "\n",
+    "\n",
+    "# Setting up player 2's board\n",
+    "\n",
+    "\n",
+    "\n",
+    "player2_board_c = input(\"Player 2, input your carrier location. It has FIVE spaces and can be placed in FIVE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the carrier to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player2_board_c == \"row\":\n",
+    "    car_row_num_2 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    car_row_spaces_2 = input(\"Which FIVE consecutive letters? E.g. ABCDE, DEFGH, FGHIJ.\")\n",
+    "    car_loc_2 = (car_row_num_2, car_row_spaces_2)\n",
+    "    print(car_row_num_2, car_row_spaces_2)\n",
+    "    player2.rows[int(car_row_num_2)][player2.columns[car_row_spaces_2[0]]:player2.columns[car_row_spaces_2[-1]]+1] = \"car\", \"car\", \"car\", \"car\", \"car\"\n",
+    "elif player2_board_c == \"column\":\n",
+    "    car_col_num_2 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    car_col_spaces_2 = input(\"Which FIVE consecutive numbers? E.g. 1:5, 3:7, 6:10.\")\n",
+    "    car_loc_2 = (car_col_num_2, car_col_spaces_2)\n",
+    "    print(car_col_num_2, car_col_spaces_2)\n",
+    "    if len(car_col_spaces_2) >3:\n",
+    "        for i in range(int(car_col_spaces_2[0]),int(car_col_spaces_2[-2:])+1):\n",
+    "            player2.rows[i][player2.columns[car_col_num_2]] = \"car\"\n",
+    "    else:\n",
+    "        for i in range(int(car_col_spaces_2[0]),int(car_col_spaces_2[2])+1):\n",
+    "            player2.rows[i][player2.columns[car_col_num_2]] = \"car\"\n",
+    "        \n",
+    "# FIX POTENTIAL ERROR WHEN INPUTTING 10 \n",
+    "#setting up player 2 battleships\n",
+    "print(\"Carrier:\", car_loc_2)\n",
+    "player2_board_b = input(\"Player 2, input your battleship location. It has FOUR spaces and can be placed in FOUR consecutive horizontal or vertical spaces. Please enter 'row' if you would like the battleship to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player2_board_b == \"row\":\n",
+    "    bat_row_num_2 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    bat_row_spaces_2 = input(\"Which FOUR consecutive letters? E.g. ABCD, DEFG, FGHI.\")\n",
+    "    bat_loc_2 = (bat_row_num_2, bat_row_spaces_2)\n",
+    "    print(bat_row_num_2, bat_row_spaces_2)\n",
+    "    player2.rows[int(bat_row_num_2)][player2.columns[bat_row_spaces_2[0]]:player2.columns[bat_row_spaces_2[-1]]+1] = \"bat\", \"bat\", \"bat\", \"bat\"\n",
+    "\n",
+    "elif player2_board_b == \"column\":\n",
+    "    bat_col_num_2 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    bat_col_spaces_2 = input(\"Which FOUR consecutive numbers? E.g. 1:4, 3:6, 6:9.\")\n",
+    "    bat_loc_2 = (bat_col_num_2, bat_col_spaces_2)\n",
+    "    print(bat_col_num_2, bat_col_spaces_2)\n",
+    "    if len(bat_col_spaces_2) >3:\n",
+    "        for i in range(int(bat_col_spaces_2[0]),int(bat_col_spaces_2[-2:])+1):\n",
+    "            player2.rows[i][player2.columns[bat_col_num_2]] = \"bat\"\n",
+    "    else:\n",
+    "        for i in range(int(bat_col_spaces_2[0]),int(bat_col_spaces_2[2])+1):\n",
+    "            player2.rows[i][player2.columns[bat_col_num_2]] = \"bat\"\n",
+    "\n",
+    "\n",
+    "#Setting up player 2 destroyers\n",
+    "print(\"Carrier:\", car_loc_2)\n",
+    "print(\"Battleship:\", bat_loc_2)\n",
+    "player2_board_d = input(\"Player 2, input your destroyer location. It has THREE spaces and can be placed in THREE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the destroyer to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player2_board_d == \"row\":\n",
+    "    des_row_num_2 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    des_row_spaces_2 = input(\"Which THREE consecutive letters? E.g. ABC, DEF, FGH.\")\n",
+    "    des_loc_2 = (des_row_num_2, des_row_spaces_2)\n",
+    "    print(des_row_num_2, des_row_spaces_2)\n",
+    "    player2.rows[int(des_row_num_2)][player2.columns[des_row_spaces_2[0]]:player2.columns[des_row_spaces_2[-1]]+1] = \"des\", \"des\", \"des\"\n",
+    "\n",
+    "elif player2_board_d == \"column\":\n",
+    "    des_col_num_2 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    des_col_spaces_2 = input(\"Which THREE consecutive numbers? E.g. 1:3, 3:5, 6:8.\")\n",
+    "    des_loc_2 = (des_col_num_2, des_col_spaces_2)\n",
+    "    print(des_col_num_2, des_col_spaces_2)\n",
+    "    if len(des_col_spaces_2) >3:\n",
+    "        for i in range(int(des_col_spaces_2[0]),int(des_col_spaces_2[-2:])+1):\n",
+    "            player2.rows[i][player2.columns[des_col_num_2]] = \"des\"\n",
+    "    else:\n",
+    "        for i in range(int(des_col_spaces_2[0]),int(des_col_spaces_2[2])+1):\n",
+    "            player2.rows[i][player2.columns[des_col_num_2]] = \"des\"\n",
+    "\n",
+    "\n",
+    "#Setting up player 2 submarines\n",
+    "print(\"Carrier:\", car_loc_2)\n",
+    "print(\"Battleship:\", bat_loc_2)\n",
+    "print(\"Destroyer:\", des_loc_2)\n",
+    "player2_board_s = input(\"Player 2, input your submarine location. It has THREE spaces and can be placed in THREE consecutive horizontal or vertical spaces. Please enter 'row' if you would like the submarine to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player2_board_s == \"row\":\n",
+    "    sub_row_num_2 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    sub_row_spaces_2 = input(\"Which THREE consecutive letters? E.g. ABC, DEF, FGH.\")\n",
+    "    sub_loc_2 = (sub_row_num_2, sub_row_spaces_2)\n",
+    "    print(sub_row_num_2, sub_row_spaces_2)\n",
+    "    player2.rows[int(sub_row_num_2)][player2.columns[sub_row_spaces_2[0]]:player2.columns[sub_row_spaces_2[-1]]+1] = \"sub\", \"sub\", \"sub\"\n",
+    "\n",
+    "elif player2_board_s == \"column\":\n",
+    "    sub_col_num_2 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    sub_col_spaces_2 = input(\"Which THREE consecutive numbers? E.g. 1:3, 3:5, 6:8.\")\n",
+    "    sub_loc_2 = (sub_col_num_2, sub_col_spaces_2)\n",
+    "    print(sub_col_num_2, sub_col_spaces_2)\n",
+    "    if len(sub_col_spaces_2) >3:\n",
+    "        for i in range(int(sub_col_spaces_2[0]),int(sub_col_spaces_2[-2:])+1):\n",
+    "            player2.rows[i][player2.columns[sub_col_num_2]] = \"sub\"\n",
+    "    else:\n",
+    "        for i in range(int(sub_col_spaces_2[0]),int(sub_col_spaces_2[2])+1):\n",
+    "            player2.rows[i][player2.columns[sub_col_num_2]] = \"sub\"\n",
+    "\n",
+    "\n",
+    "#setting up player 2 patrol boats\n",
+    "print(\"Carrier:\", car_loc_2)\n",
+    "print(\"Battleship:\", bat_loc_2)\n",
+    "print(\"Destroyer:\", des_loc_2)\n",
+    "print(\"Submarine:\", sub_loc_2)\n",
+    "player2_board_p = input(\"Player 2, input your patrol boat location. It has TWO spaces and can be placed in TWO consecutive horizontal or vertical spaces. Please enter 'row' if you would like the patrol boat to span a row, or 'column' if you would like it to span a column\")\n",
+    "if player2_board_p == \"row\":\n",
+    "    pat_row_num_2 = (input(\"Which row? E.g. Any number from 1 to 10\"))\n",
+    "    pat_row_spaces_2 = input(\"Which TWO consecutive letters? E.g. AB, DE, FG.\")\n",
+    "    print(pat_row_num_2, pat_row_spaces_2)\n",
+    "    player2.rows[int(pat_row_num_2)][player2.columns[pat_row_spaces_2[0]]:player2.columns[pat_row_spaces_2[-1]]+1] = \"pat\", \"pat\"\n",
+    "\n",
+    "elif player2_board_p == \"column\":\n",
+    "    pat_col_num_2 = input(\"Which column? E.g. A, B, C, ...\")\n",
+    "    pat_col_spaces_2 = input(\"Which TWO consecutive numbers? E.g. 1:2, 3:4, 6:7.\")\n",
+    "    print(pat_col_num_2, pat_col_spaces_2)\n",
+    "    if len(pat_col_spaces_2) >3:\n",
+    "        for i in range(int(pat_col_spaces_2[0]),int(pat_col_spaces_2[-2:])+1):\n",
+    "            player2.rows[i][player2.columns[pat_col_num_2]] = \"pat\"\n",
+    "    else:\n",
+    "        for i in range(int(pat_col_spaces_2[0]),int(pat_col_spaces_2[2])+1):\n",
+    "            player2.rows[i][player2.columns[pat_col_num_2]] = \"pat\""
+   ]
   }
  ],
  "metadata": {
