--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,48 @@
     "    def attack_board(self):\n",
     "        for line in self.rows_attack:\n",
     "            print(line)\n",
-    "            print(\"\\n\")"
+    "            print(\"\\n\")\n",
+    "\n",
+    "#The below is for attacking another player.\n",
+    "    def attack(self, other_player):\n",
+    "        attack_input = input(\"{}, where would you like to attack? E.g. A10, B7, D2, E9, . . . \".format(self.name))\n",
+    "        attack_input = attack_input.upper()\n",
+    "        if len(attack_input) > 2:\n",
+    "            attack_site = other_player.rows[int(attack_input[-2:])][other_player.columns[attack_input[0]]]\n",
+    "        else:\n",
+    "            attack_site = other_player.rows[int(attack_input[-1])][other_player.columns[attack_input[0]]]\n",
+    "#The below checks if the attack location has a ship or not\n",
+    "        if attack_site != attack_input:\n",
+    "            print(\"Attack successful! {name}'s {ship} was damaged\".format(name = other_player.name, ship = self.ship_abb[attack_site]))\n",
+    "            #Increment hit counter\n",
+    "            self.successful_hits += 1\n",
+    "            enemy_player_ship_list = other_player.ship_list[attack_site]\n",
+    "            #Replace locations with a hit marker on both boards\n",
+    "            if len(attack_input) > 2:\n",
+    "                self.rows_attack[int(attack_input[-2:])][self.columns[attack_input[0]]] = \"hit\"\n",
+    "                other_player.rows[int(attack_input[-2:])][other_player.columns[attack_input[0]]] = \"hit\"\n",
+    "            else:\n",
+    "                self.rows_attack[int(attack_input[-1])][self.columns[attack_input[0]]] = \"hit\"\n",
+    "                other_player.rows[int(attack_input[-1])][other_player.columns[attack_input[0]]] = \"hit\"\n",
+    "            enemy_player_ship_list.pop()\n",
+    "            #If the ship has been attacked in all locations, print destroyed\n",
+    "            if len(enemy_player_ship_list) <1:\n",
+    "                    print(\"{name}'s {ship} was destroyed!\".format(name = other_player.name, ship = other_player.ship_abb[attack_site]))\n",
+    "            #If hit counter gets to 17, player wins and game is over\n",
+    "            if self.successful_hits == 17:\n",
+    "                print(\"All of {pla1}'s ships have been destroyed. {pla2} wins!\".format(pla1 = other_player.name, pla2 = self.name))\n",
+    "            #If attack misses, replace location with miss marker\n",
+    "        else: \n",
+    "            print(\"Attack missed!\")\n",
+    "            if len(attack_input) > 2:\n",
+    "                self.rows_attack[int(attack_input[-2:])][self.columns[attack_input[0]]] = \"miss\"\n",
+    "            else:\n",
+    "                self.rows_attack[int(attack_input[-1])][self.columns[attack_input[0]]] = \"miss\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +183,9 @@
     "            for i in range(int(col_spaces[0]),int(col_spaces[2])+1):\n",
     "                player1.rows[i][player1.columns[col_num]] = abbrev[i]\n",
     "\n",
+    "                \n",
+    "#The below code is identical to the block above except it is for player 2\n",
+    "#Setting up Player 2's board\n",
     "for i in range(5):\n",
     "    player2_board_c = input(f\"Player 2, input your {names[i]} location. It has {length[i]} spaces and can be placed in {length[i]} consecutive horizontal or vertical spaces. Please enter 'row' if you would like the carrier to span a row, or 'column' if you would like it to span a column\")\n",
     "    if player2_board_c == \"row\":\n",
@@ -171,6 +210,8 @@
     "        play2_dict[i]['row_spaces'] = row_spaces\n",
     "#The below is for putting the inputted locations onto the player's board.\n",
     "        player2.rows[int(row_num)][player1.columns[row_spaces[0]]:player1.columns[row_spaces[-1]]+1] = [abbrev[i]]*int(length[i])\n",
+    "\n",
+    "\n",
     "#The below is if the players enters by columns instead of rows.\n",
     "    elif player2_board_c == 'column':\n",
     "        col_num = input(\"Which column? E.g. A, B, C, ...\")\n",
@@ -189,13 +230,96 @@
     "            for i in range(int(col_spaces[0]),int(col_spaces[2])+1):\n",
     "                player2.rows[i][player2.columns[col_num]] = abbrev[i]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "\n",
+      "\n",
+      "['A1', 'B1', 'C1', 'D1', 'E1', 'F1', 'G1', 'H1', 'I1', 'J1']\n",
+      "\n",
+      "\n",
+      "['A2', 'B2', 'C2', 'D2', 'E2', 'F2', 'G2', 'H2', 'I2', 'J2']\n",
+      "\n",
+      "\n",
+      "['A3', 'B3', 'C3', 'D3', 'E3', 'F3', 'G3', 'H3', 'I3', 'J3']\n",
+      "\n",
+      "\n",
+      "['A4', 'B4', 'C4', 'D4', 'E4', 'F4', 'G4', 'H4', 'I4', 'J4']\n",
+      "\n",
+      "\n",
+      "['A5', 'B5', 'C5', 'D5', 'E5', 'F5', 'G5', 'H5', 'I5', 'J5']\n",
+      "\n",
+      "\n",
+      "['A6', 'B6', 'C6', 'D6', 'E6', 'F6', 'G6', 'H6', 'I6', 'J6']\n",
+      "\n",
+      "\n",
+      "['A7', 'B7', 'C7', 'D7', 'E7', 'F7', 'G7', 'H7', 'I7', 'J7']\n",
+      "\n",
+      "\n",
+      "['A8', 'B8', 'C8', 'D8', 'E8', 'F8', 'G8', 'H8', 'I8', 'J8']\n",
+      "\n",
+      "\n",
+      "['A9', 'B9', 'C9', 'D9', 'E9', 'F9', 'G9', 'H9', 'I9', 'J9']\n",
+      "\n",
+      "\n",
+      "['A10', 'B10', 'C10', 'D10', 'E10', 'F10', 'G10', 'H10', 'I10', 'J10']\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Player' object has no attribute 'attack'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m player1\u001b[38;5;241m.\u001b[39msuccessful_hits \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m17\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m player2\u001b[38;5;241m.\u001b[39msuccessful_hits \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m17\u001b[39m:\n\u001b[1;32m      2\u001b[0m     player1\u001b[38;5;241m.\u001b[39mattack_board()\n\u001b[0;32m----> 3\u001b[0m     player1\u001b[38;5;241m.\u001b[39mattack(player2)\n\u001b[1;32m      4\u001b[0m     player2\u001b[38;5;241m.\u001b[39mattack_board()\n\u001b[1;32m      5\u001b[0m     player2\u001b[38;5;241m.\u001b[39mattack(player1)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Player' object has no attribute 'attack'"
+     ]
+    }
+   ],
+   "source": [
+    "while player1.successful_hits < 17 and player2.successful_hits < 17:\n",
+    "    player1.attack_board()\n",
+    "    player1.attack(player2)\n",
+    "    player2.attack_board()\n",
+    "    player2.attack(player1)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
