--- a/battleship.ipynb
+++ b/battleship.ipynb
@@ -243,6 +243,16 @@
     "    player2.attack_board()\n",
     "    player2.attack(player1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Future Potential Improvement\n",
+    "* ~~Reduce amount of code for inputting ship locations~~\n",
+    "* ~~Update location input so that there is no overlap and you cannot place on an existing location~~\n",
+    "* Create loops so that all invalid inputs can never get through"
+   ]
   }
  ],
  "metadata": {
